--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>McRide</title>
+    <link rel="shortcut icon" type="x-icon"  href="img/icon.ico" >
     <!--link to css-->
     <link rel="stylesheet" href="styles.css">
     <!--box icons-->
@@ -14,7 +15,7 @@
 <body>
     <!--header-->
     <header>
-        <a href="#" class="logo"><img src="/img/logo.svg    " alt=""></a>
+        <a href="#" class="logo"><img src="./img/logo.svg" alt=""></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
