--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <!--box icons-->
     <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+  
+    <!--link to js-->
+    <link rel="stylesheet" href="main.js">
+    
 </head>
 <body>
     <!--header-->
     <header>
-        <a href="#" class="logo"><img src="./img/logo.svg" alt=""></a>
+        <a href="#" class="logo"><img src="/img/logo.svg    " alt=""></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
@@ -34,7 +38,7 @@
     <section class="home" id="home">
         <div class="text">
             <h1><span>Looking</span><hn id="hn"> to <br>rent a CAR</hn><span>?</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <img src="img/car website-1.png" alt="">
         </div>
         <div class="form-container">
             <form action="">
@@ -269,8 +273,8 @@
     </footer>
     <!--scrollreveal-->
     <script src="https://unpkg.com/scrollreveal"></script>
+     <!--link to js-->
+    <script src="main.js"></script>
 
-    <!--link to js-->
-    <script src="main.js "></script>
 </body>
 </html>
