--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <!--header-->
     <header>
-        <a href="#" class="logo"><img src="/img/logo.svg    " alt=""></a>
+        <a href="#" class="logo"><img src="./img/logo.svg" alt=""></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
