--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="home" id="home">
         <div class="text">
             <h1><span>Looking</span><hn id="hn"> to <br>rent a CAR</hn><span>?</span></h1>
-            <img src="img/car website-1.png" alt="">
+            <img src="./img/car website-1.png" alt="">
         </div>
         <div class="form-container">
             <form action="">
