--- a/index.html
+++ b/index.html
@@ -96,61 +96,61 @@
         <div class="services-container">
             <div class="box">
                 <div class="box-img">
-                    <img src="img/car1.jpg" alt="">
+                    <img src="img/swift.jpg" alt="">
                 </div>
-                <p>2017</p>
-                <h3>Honda Civik</h3>
+                <p>2022</p>
+                <h3>SWIFT</h3>
                 <h2>350<span>/Hour</span></h2>
                 <a href="#" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
                 <div class="box-img">
-                    <img src="img/car6.jpg" alt="">
+                    <img src="img/innova.jpg" alt="">
                 </div>
-                <p>2017</p>
-                <h3>Porsche 718 Cayman</h3>
+                <p>2020</p>
+                <h3>Innova Crysta</h3>
+                <h2>600<span>/Hour</span></h2>
+                <a href="#" class="btn">Rent Now</a>
+            </div>
+
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/baleno.jpg" alt="">
+                </div>
+                <p>2019</p>
+                <h3>Baleno</h3>
                 <h2>350<span>/Hour</span></h2>
                 <a href="#" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
                 <div class="box-img">
-                    <img src="img/car1.jpg" alt="">
+                    <img src="img/Mahindra-Bolero.jpg" alt="">
                 </div>
-                <p>2017</p>
-                <h3>Honda Civik</h3>
+                <p>2015</p>
+                <h3>Mahindra Bolero</h3>
+                <h2>500<span>/Hour</span></h2>
+                <a href="#" class="btn">Rent Now</a>
+            </div>
+
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/nexon.gif" alt="">
+                </div>
+                <p>2022</p>
+                <h3>Nexon EV</h3>
                 <h2>350<span>/Hour</span></h2>
                 <a href="#" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
                 <div class="box-img">
-                    <img src="img/car6.jpg" alt="">
+                    <img src="img/triber.png" alt="">
                 </div>
-                <p>2017</p>
-                <h3>Porsche 718 Cayman</h3>
-                <h2>350<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
-            </div>
-
-            <div class="box">
-                <div class="box-img">
-                    <img src="img/car1.jpg" alt="">
-                </div>
-                <p>2017</p>
-                <h3>Honda Civik</h3>
-                <h2>350<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
-            </div>
-
-            <div class="box">
-                <div class="box-img">
-                    <img src="img/car6.jpg" alt="">
-                </div>
-                <p>2017</p>
-                <h3>Porsche 718 Cayman</h3>
-                <h2>350<span>/Hour</span></h2>
+                <p>2020</p>
+                <h3>Triber</h3>
+                <h2>500<span>/Hour</span></h2>
                 <a href="#" class="btn">Rent Now</a>
             </div>
             
@@ -166,10 +166,50 @@
             
             <div class="box">
                 <div class="box-img">
-                    <img src="img/car6.jpg" alt="">
+                    <img src="img/thar.jpg" alt="">
+                </div>
+                <p>2020</p>
+                <h3>THAR</h3>
+                <h2>400<span>/Hour</span></h2>
+                <a href="#" class="btn">Rent Now</a>
+            </div>
+
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/thar.jpg" alt="">
+                </div>
+                <p>2020</p>
+                <h3>THAR</h3>
+                <h2>400<span>/Hour</span></h2>
+                <a href="#" class="btn">Rent Now</a>
+            </div>
+
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/car1.jpg" alt="">
                 </div>
                 <p>2017</p>
-                <h3>Porsche 718 Cayman</h3>
+                <h3>Honda Civik</h3>
+                <h2>350<span>/Hour</span></h2>
+                <a href="#" class="btn">Rent Now</a>
+            </div>
+
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/car1.jpg" alt="">
+                </div>
+                <p>2017</p>
+                <h3>Honda Civik</h3>
+                <h2>350<span>/Hour</span></h2>
+                <a href="#" class="btn">Rent Now</a>
+            </div>
+
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/car1.jpg" alt="">
+                </div>
+                <p>2017</p>
+                <h3>Honda Civik</h3>
                 <h2>350<span>/Hour</span></h2>
                 <a href="#" class="btn">Rent Now</a>
             </div>
