--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <p>2022</p>
                 <h3>SWIFT</h3>
                 <h2>350<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
@@ -111,7 +111,7 @@
                 <p>2020</p>
                 <h3>Innova Crysta</h3>
                 <h2>600<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
@@ -121,7 +121,7 @@
                 <p>2019</p>
                 <h3>Baleno</h3>
                 <h2>350<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
@@ -131,7 +131,7 @@
                 <p>2015</p>
                 <h3>Mahindra Bolero</h3>
                 <h2>500<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
@@ -141,7 +141,7 @@
                 <p>2022</p>
                 <h3>Nexon EV</h3>
                 <h2>350<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
@@ -151,7 +151,7 @@
                 <p>2020</p>
                 <h3>Triber</h3>
                 <h2>500<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
             
             <div class="box">
@@ -161,7 +161,7 @@
                 <p>2017</p>
                 <h3>Honda Civik</h3>
                 <h2>350<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
             
             <div class="box">
@@ -171,7 +171,7 @@
                 <p>2020</p>
                 <h3>THAR</h3>
                 <h2>400<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
@@ -181,7 +181,7 @@
                 <p>2020</p>
                 <h3>THAR</h3>
                 <h2>400<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
@@ -191,7 +191,7 @@
                 <p>2017</p>
                 <h3>Honda Civik</h3>
                 <h2>350<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
@@ -201,7 +201,7 @@
                 <p>2017</p>
                 <h3>Honda Civik</h3>
                 <h2>350<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
 
             <div class="box">
@@ -211,7 +211,7 @@
                 <p>2017</p>
                 <h3>Honda Civik</h3>
                 <h2>350<span>/Hour</span></h2>
-                <a href="#" class="btn">Rent Now</a>
+                <a href="https://abhishek-2003-vashisth.github.io/database_3/" class="btn">Rent Now</a>
             </div>
         </div>
     </section>
